--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 		<title>XII 6 C1 Clan</title>
 
 		<!-- Primary Meta Tags -->
-		<meta name="title" content="XI TKJ 3" />
+		<meta name="title" content="XII 6" />
 		<meta
 			name="description"
-			content="Selamat datang di halaman resmi kelas XI TKJ 3 SMK Persada Husada Indonesia! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XI TKJ 3, yang tertarik pada Teknik Komputer dan Jaringan." />
+			content="Selamat datang di halaman resmi kelas XII 6" />
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://xitkj3.vercel.app/" />
-		<meta property="og:title" content="XI TKJ 3" />
+		<meta property="og:url" content="" />
+		<meta property="og:title" content="XII 6" />
 		<meta
 			property="og:description"
-			content="Selamat datang di halaman resmi kelas XI TKJ 3 SMK Persada Husada Indonesia! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XI TKJ 3, yang tertarik pada Teknik Komputer dan Jaringan." />
-		<meta property="og:image" content="https://xitkj3.vercel.app/Welcome.png" />
+			content="Selamat datang di halaman resmi kelas XII 6 SMAN 27 Bandung" />
+		<meta property="og:image" content="/Background XII6.jpg" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://xitkj3.vercel.app/" />
-		<meta property="twitter:title" content="XI TKJ 3" />
+		<meta property="twitter:url" content="" />
+		<meta property="twitter:title" content="XII 6" />
 		<meta
 			property="twitter:description"
-			content="Selamat datang di halaman resmi kelas XI TKJ 3 SMK Persada Husada Indonesia! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XI TKJ 3, yang tertarik pada Teknik Komputer dan Jaringan." />
-		<meta property="twitter:image" content="https://xitkj3.vercel.app/Welcome.png" />
+			content="Selamat datang di halaman resmi kelas XII 6 SMAN 27 Bandung" />
+		<meta property="twitter:image" content="/Background XII6.jpg" />
 	</head>
 	<body>
 		<div id="root"></div>
